--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
   "require": {
     "slim/slim": "2.*",
     "twig/twig": "~1.0",
-    "electrolinux/phpquery": "*"
+    "guzzlehttp/guzzle": "^6.1",
+    "zendframework/zend-dom": "^2.5",
+    "querypath/QueryPath": "^3.0"
   }
 }
